just get the apis running with basic health points to ensure env is ok

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:20
 
 WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm install || true
+COPY package.json package-lock.json* tsconfig.json next.config.js ./
+RUN npm install
 
-COPY . .
+COPY pages ./pages
 CMD ["npm", "run", "dev"]
 
