--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,30 +105,37 @@ services:
       - ragnet
 
   api:
-    build: ./backend/api
+    build:
+      context: ./backend
+      dockerfile: api/Dockerfile
     container_name: api
     restart: unless-stopped
     ports:
-      - "${API_PORT}:8000"
-    depends_on:
-      - postgres
-      - qdrant
-      - elasticsearch
-      - redis
-      - keycloak
-    networks:
-      - ragnet
+      - "${API_PORT:-8000}:8000"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/healthz || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 10
+    networks: [ragnet]
 
   coordinator:
-    build: ./backend/coordinator
+    build:
+      context: ./backend
+      dockerfile: coordinator/Dockerfile
     container_name: coordinator
     restart: unless-stopped
     ports:
-      - "${COORDINATOR_PORT}:8001"
+      - "${COORDINATOR_PORT:-8001}:8001"
     depends_on:
-      - api
-    networks:
-      - ragnet
+      api:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8001/healthz || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 10
+    networks: [ragnet]
 
   frontend:
     build: ./frontend
