--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 python = "^3.11"
 fastapi = "0.115.0"
 uvicorn = { version = "0.30.1", extras = ["standard"] }
+httpx = "^0.27.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
